--- a/main.html
+++ b/main.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 
 <html>
-	<title>"Welcome to the world of Web development"</title>
+	<title>Welcome to the world of Web development</title>
 <head>
 	<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-	<div>id="text"> Welcome to the world of Web devlopment</div>
+	<div>Welcome to the world of Web devlopment</div>
 	<!-- the entire body must be written by student -->
 	
 
