--- a/main.html
+++ b/main.html
@@ -1,20 +1,11 @@
 <!DOCTYPE html>
-
 <html>
-	<title>Welcome to the world of Web development</title>
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <title>Basic HTML Task</title>
 </head>
-
 <body>
-	<div>Welcome to the world of Web devlopment</div>
-	<!-- the entire body must be written by student -->
-	
 
-
-    <script type="text/javascript" src="./script.js">
-</script>
+  <div id="text">Welcome to the world of Web development</div>
 
 </body>
-
 </html>
